# f1predictor

./: .dockerignore  .editorconfig  .github-workflows-test.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  FIXES_AND_IMPROVEMENTS.md  LICENSE  Makefile  OPENCODE_PAT_SETUP.md  README.md  README_UPDATES.md  Round  app.py  calibration_weights.json  check_2026_schedule.py  config.yaml  debug_fastf1.py  debug_mapping.py  debug_shap2.py  fix_mro.py  list_sessions.py  main.py  opencode.json  prediction_output.txt  pyproject.toml  repro_issue.py  repro_mro.py  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_predict.py  run_server.py  run_sim_bug.py  run_sim_bug2.py  run_sim_bug3.py  run_sim_bug4.py  run_sim_bug5.py  (+27 more)
.Jules/: palette.md
.agents/workflows/: releasing.md
.github/workflows/: ai-pipeline.yml  ai-pr-review.yml  build.yml  claude-code-review.yml  docker-publish.yml  opencode-auto.yml  opencode-ci-fix.yml  opencode-easy.yml  opencode-hard.yml  opencode-plan.yml  opencode-review.yml  opencode.yml  pr-review.yml  release.yml  tests.yml
.jules/: archivist.md  bolt.md  palette.md  sentinel.md  spec.md  sweep.md
.opencode/agents/: aggregator.md  classifier.md  fixer.md  plan.md  planner.md  pr-responder.md  worker-core.md  worker-data.md  worker-easy.md  worker-hard.md  worker-infra.md  worker-prediction.md  worker-test.md
MagicMock/mock.paths.cache_dir/139628689504400/: latest_predictions.json
MagicMock/mock.paths.cache_dir/140300428435984/: latest_predictions.json
MagicMock/mock.paths.cache_dir/140300428581520/: latest_predictions.json
MagicMock/mock.paths.cache_dir/140300439592960/: latest_predictions.json
MagicMock/mock.paths.cache_dir/140399798672400/: latest_predictions.json
MagicMock/mock.paths.cache_dir/140399799934208/: latest_predictions.json
MagicMock/mock.paths.cache_dir/140498172918096/: latest_predictions.json
e2e/: README.md  test_ui_fix.py  test_ui_layout.py
f1pred/: auth.py  backtest.py  calibrate.py  config.py  database.py  ensemble.py  features.py  init.py  live.py  metrics.py  models.py  models_db.py  predict.py  prediction_manager.py  ranking.py  report.py  roster.py  simulate.py  util.py  web.py
f1pred/data/: fastf1_backend.py  init.py  jolpica.py  open_meteo.py  openf1.py
f1pred/templates/: index.html
templates/: error.html  index.html  results.html
tests/: __init__.py  conftest.py  repro_grid_logic.py  test_audit_fixes.py  test_auth.py  test_backtest.py  test_calibration.py  test_calibration_run.py  test_calibration_trigger.py  test_config.py  test_config_security.py  test_ensemble.py  test_ensemble_quali.py  test_fastf1_backend.py  test_feature_computations.py  test_features.py  test_features_history.py  test_features_season_cache.py  test_finished_session_stats.py  test_influence.py  test_jolpica_endpoints.py  test_jolpica_parallel.py  test_live.py  test_metrics.py  test_models.py  test_open_meteo.py  test_optimization.py  test_password_change.py  test_perf_weights.py  test_predict_render.py  test_prediction_cache.py  test_prediction_manager.py  test_qual_boost.py  test_qualifying_weight.py  test_ranking.py  test_release_config.py  test_robustness.py  test_roster.py  test_roster_fix.py  test_roster_malformed_entries.py  (+32 more)
