[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1predictor"
version = "1.1.0"
description = "Formula 1 race outcome predictor using machine learning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "F1 Predictor Contributors"}
]
keywords = ["formula-1", "f1", "prediction", "machine-learning", "racing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/2fst4u/f1predictor"
Repository = "https://github.com/2fst4u/f1predictor"
Issues = "https://github.com/2fst4u/f1predictor/issues"
