[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1predictor"
dynamic = ["version"]
description = "Formula 1 race outcome predictor using machine learning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "F1 Predictor Contributors"}
]
keywords = ["formula-1", "f1", "prediction", "machine-learning", "racing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/2fst4u/f1predictor"
Repository = "https://github.com/2fst4u/f1predictor"
Issues = "https://github.com/2fst4u/f1predictor/issues"

[tool.setuptools_scm]
write_to = "f1pred/_version.py"

[tool.coverage.run]
omit = [
    "tests/*",
    "f1pred/init.py",
    "f1pred/_version.py"
]

[tool.coverage.report]
fail_under = 49.96
show_missing = true
